--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GTDApp.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GTDApp.csproj
@@ -39,6 +39,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Debug\GTDApp.xml</DocumentationFile>
     <CodeAnalysisRuleSet>..\oenik.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -48,6 +49,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -73,7 +75,6 @@
       <Link>stylecop.json</Link>
     </AdditionalFiles>
     <None Include="App.config" />
-    <None Include="oenik.ruleset" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
