--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp/App.config
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp/App.config
@@ -5,4 +5,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <connectionStrings>
+      <add name="GTDEntityDataModel" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\GTDDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    </connectionStrings>
 </configuration>
