--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp/packages.config
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp/packages.config
@@ -1,4 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Colorful.Console" version="1.2.9" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.1" targetFramework="net461" />
+  <package id="NetEscapades.Configuration.Yaml" version="1.5.0" targetFramework="net461" />
+  <package id="NStack.Core" version="0.11.0" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net461" developmentDependency="true" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
+  <package id="System.IO" version="4.1.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net461" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="Terminal.Gui" version="0.16.0" targetFramework="net461" />
+  <package id="YamlDotNet" version="5.1.0" targetFramework="net461" />
 </packages>
