--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp/packages.config
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Colorful.Console" version="1.2.9" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="1.0.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="1.0.2" targetFramework="net461" />
