--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
@@ -112,15 +112,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\DefaultAttribute.cs" />
-    <Compile Include="Attributes\RouteAttribute.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\ContainerController.cs" />
-    <Compile Include="Controllers\IController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\JavaWebController.cs" />
     <Compile Include="Controllers\ReviewController.cs" />
+    <Compile Include="Menu\MainMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -128,21 +126,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Router.cs" />
     <Compile Include="Views\Containers\DeleteContainerView.cs" />
     <Compile Include="Views\Containers\CreateContainerView.cs" />
     <Compile Include="Views\Containers\UpdateContainerView.cs" />
     <Compile Include="Views\Containers\ListContainersView.cs" />
     <Compile Include="Views\DashboardView.cs" />
     <Compile Include="Views\ErrorView.cs" />
-    <Compile Include="Views\Helpers\Box10Helper.cs" />
-    <Compile Include="Views\Helpers\CommonHelper.cs" />
-    <Compile Include="Views\Helpers\FillerHelper.cs" />
-    <Compile Include="Views\Helpers\PaginatorHelper.cs" />
-    <Compile Include="Views\Helpers\QuitHelper.cs" />
-    <Compile Include="Views\Helpers\TableHelper.cs" />
-    <Compile Include="Views\IView.cs" />
-    <Compile Include="Views\MenuBars\MainMenuBar.cs" />
     <Compile Include="Views\ReviewView.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -173,6 +162,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GTDApp.ConsoleCore\GTDApp.ConsoleCore.csproj">
+      <Project>{e21bf1e5-69d0-4a53-af75-1df64704c172}</Project>
+      <Name>GTDApp.ConsoleCore</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GTDApp.Data\GtdApp.Data.csproj">
       <Project>{EDCB7DCA-E17F-4829-8884-8C5D11A2E364}</Project>
       <Name>GtdApp.Data</Name>
