--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.ConsoleCore/GTDApp.ConsoleCore.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.ConsoleCore/GTDApp.ConsoleCore.csproj
@@ -52,9 +52,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Menu\IMenu.cs" />
     <Compile Include="Menu\Menu.cs" />
     <Compile Include="Menu\MenuItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\AbstractView.cs" />
     <Compile Include="View\Helpers\Box10Helper.cs" />
     <Compile Include="View\Helpers\CommonHelper.cs" />
     <Compile Include="View\Helpers\FillerHelper.cs" />
