--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Views\Containers\ListContainersView.cs" />
     <Compile Include="Views\DashboardView.cs" />
     <Compile Include="Views\ErrorView.cs" />
+    <Compile Include="Views\JavaWebView.cs" />
     <Compile Include="Views\ReviewView.cs" />
   </ItemGroup>
   <ItemGroup>
