--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Login/GTDApp.Logic.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Login/GTDApp.Logic.csproj
@@ -59,7 +59,12 @@
     <Compile Include="Attributes\RouteAttribute.cs" />
     <Compile Include="BusinessLogic.cs" />
     <Compile Include="Common.cs" />
+    <Compile Include="Exceptions\Handlers\DetailedExceptionHandler.cs" />
+    <Compile Include="Exceptions\Handlers\GenericExceptionHandler.cs" />
+    <Compile Include="Exceptions\Handlers\NullExceptionHandler.cs" />
+    <Compile Include="Exceptions\JavaWebCallFailedException.cs" />
     <Compile Include="Interfaces\IController.cs" />
+    <Compile Include="Interfaces\IExceptionHandler.cs" />
     <Compile Include="Interfaces\IView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
