refactore routing and dependencies

--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.ConsoleCore/GTDApp.ConsoleCore.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.ConsoleCore/GTDApp.ConsoleCore.csproj
@@ -52,6 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AbstractController.cs" />
     <Compile Include="Menu\IMenu.cs" />
     <Compile Include="Menu\Menu.cs" />
     <Compile Include="Menu\MenuItem.cs" />
