--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
@@ -120,7 +120,7 @@
     <Compile Include="Controllers\ReviewController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Menu\MainMenu.cs" />
-    <Compile Include="Menu\MainMenuEnum.cs" />
+    <Compile Include="RoutesEnum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
