--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Data/App.config
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Data/App.config
@@ -16,5 +16,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="GTDEntityDataModel" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\GTDDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="GtdEntityDataModel" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\GtdDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
