--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
@@ -118,7 +118,9 @@
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\JavaWebController.cs" />
     <Compile Include="Controllers\ReviewController.cs" />
-    <Compile Include="Controllers\SettingsController.cs" />
+    <Compile Include="Exceptions\Handlers\DetailedExceptionHandler.cs" />
+    <Compile Include="Exceptions\Handlers\GenericExceptionHandler.cs" />
+    <Compile Include="Exceptions\Handlers\NullExceptionHandler.cs" />
     <Compile Include="Menu\MainMenu.cs" />
     <Compile Include="RoutesEnum.cs" />
     <Compile Include="Program.cs" />
@@ -135,8 +137,8 @@
     <Compile Include="Views\DashboardView.cs" />
     <Compile Include="Views\ErrorView.cs" />
     <Compile Include="Views\JavaWebView.cs" />
+    <Compile Include="Views\Modals\ValidationErrorMessageModalView.cs" />
     <Compile Include="Views\ReviewView.cs" />
-    <Compile Include="Views\SettingsView.cs" />
   </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include="..\stylecop.json">
