--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Login/GTDApp.Logic.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Login/GTDApp.Logic.csproj
@@ -56,18 +56,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\AbstractRouteAtribute.cs" />
-    <Compile Include="Attributes\DefaultErrorRouteAttribute.cs" />
     <Compile Include="Attributes\DefaultRouteAttribute.cs" />
     <Compile Include="Attributes\RouteAttribute.cs" />
     <Compile Include="BusinessLogic.cs" />
     <Compile Include="Common.cs" />
-    <Compile Include="Exceptions\Handlers\DetailedExceptionHandler.cs" />
-    <Compile Include="Exceptions\Handlers\GenericExceptionHandler.cs" />
-    <Compile Include="Exceptions\Handlers\NullExceptionHandler.cs" />
+    <Compile Include="DTO\ContainerDTO.cs" />
     <Compile Include="Exceptions\JSONApiCallFailedException.cs" />
     <Compile Include="Exceptions\NoRouteFoundException.cs" />
     <Compile Include="Interfaces\IController.cs" />
-    <Compile Include="Interfaces\IExceptionHandler.cs" />
+    <Compile Include="Interfaces\IDTO.cs" />
     <Compile Include="Interfaces\IView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -78,6 +75,7 @@
     <Compile Include="Routing\Route.cs" />
     <Compile Include="Routing\Router.cs" />
     <Compile Include="Routing\RouterHelper.cs" />
+    <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -102,5 +100,6 @@
       <Name>GtdApp.Repository</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
