--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Repository/GTDApp.Repository.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Repository/GTDApp.Repository.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IItemRepository.cs" />
+    <Compile Include="ItemRepository.cs" />
     <Compile Include="ContainerRepository.cs" />
     <Compile Include="Interfaces\IContainerRepository.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
