--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
@@ -132,12 +132,12 @@
     </Compile>
     <Compile Include="Views\Containers\DeleteContainerView.cs" />
     <Compile Include="Views\Containers\ManageContainerView.cs" />
-    <Compile Include="Views\Containers\UpdateContainerView.cs" />
     <Compile Include="Views\Containers\ListContainersView.cs" />
     <Compile Include="Views\DashboardView.cs" />
     <Compile Include="Views\ErrorView.cs" />
     <Compile Include="Views\Items\DeleteItemView.cs" />
     <Compile Include="Views\Items\ListItemsView.cs" />
+    <Compile Include="Views\Items\ManageItemView.cs" />
     <Compile Include="Views\JavaWebView.cs" />
     <Compile Include="Views\Modals\ValidationErrorMessageModalView.cs" />
     <Compile Include="Views\ReviewView.cs" />
