--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
@@ -112,12 +112,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\NotificationController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\ContainerController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\JavaWebController.cs" />
-    <Compile Include="Controllers\ReviewController.cs" />
     <Compile Include="Exceptions\Handlers\DetailedExceptionHandler.cs" />
     <Compile Include="Exceptions\Handlers\GenericExceptionHandler.cs" />
     <Compile Include="Exceptions\Handlers\NullExceptionHandler.cs" />
@@ -140,6 +140,9 @@
     <Compile Include="Views\Items\ManageItemView.cs" />
     <Compile Include="Views\JavaWebView.cs" />
     <Compile Include="Views\Modals\ValidationErrorMessageModalView.cs" />
+    <Compile Include="Views\Notifications\DeleteNotificationView.cs" />
+    <Compile Include="Views\Notifications\ListNotificationsView.cs" />
+    <Compile Include="Views\Notifications\ManageNotificationView.cs" />
     <Compile Include="Views\ReviewView.cs" />
   </ItemGroup>
   <ItemGroup>
