item notification checkbox list in item manage form :)

--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Repository/GTDApp.Repository.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Repository/GTDApp.Repository.csproj
@@ -52,7 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IItem_NotificationRepository.cs" />
     <Compile Include="Interfaces\INotificationRepository.cs" />
+    <Compile Include="Item_notificationRepository.cs" />
     <Compile Include="NotificationRepository.cs" />
     <Compile Include="Interfaces\IItemRepository.cs" />
     <Compile Include="ItemRepository.cs" />
