--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Data/GTDApp.Data.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Data/GTDApp.Data.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Container.cs" />
+    <Compile Include="Dto\AggregatesByContainerTypeDto.cs" />
     <Compile Include="GtdEntityDataModel.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Item_notification.cs" />
