--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Data/GTDApp.Data.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Data/GTDApp.Data.csproj
@@ -39,8 +39,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\oenik.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>
-    </DocumentationFile>
+    <DocumentationFile>bin\Debug\GTDApp.Data.xml</DocumentationFile>
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
   </PropertyGroup>
