--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Login/GTDApp.Logic.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Login/GTDApp.Logic.csproj
@@ -55,16 +55,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\AbstractRouteAtribute.cs" />
+    <Compile Include="Attributes\AbstractRouteAttribute.cs" />
     <Compile Include="Attributes\DefaultRouteAttribute.cs" />
     <Compile Include="Attributes\RouteAttribute.cs" />
     <Compile Include="BusinessLogic.cs" />
     <Compile Include="Common.cs" />
-    <Compile Include="DTO\ContainerDTO.cs" />
     <Compile Include="Exceptions\JSONApiCallFailedException.cs" />
     <Compile Include="Exceptions\NoRouteFoundException.cs" />
     <Compile Include="Interfaces\IController.cs" />
-    <Compile Include="Interfaces\IDTO.cs" />
     <Compile Include="Interfaces\IView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -75,7 +73,6 @@
     <Compile Include="Routing\Route.cs" />
     <Compile Include="Routing\Router.cs" />
     <Compile Include="Routing\RouterHelper.cs" />
-    <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
