--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Logic.Tests/GTDApp.Logic.Tests.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Logic.Tests/GTDApp.Logic.Tests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{CB4C5559-E206-4858-960F-292AF1BE1881}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GTDApp.Logic.Tests</RootNamespace>
-    <AssemblyName>GTDApp.Logic.Tests</AssemblyName>
+    <RootNamespace>GtdApp.Logic.Tests</RootNamespace>
+    <AssemblyName>GtdApp.Logic.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -26,7 +26,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\oenik.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Debug\GTDApp.Logic.Tests.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\GtdApp.Logic.Tests.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
