--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Repository.Tests/GTDApp.Repository.Tests.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Repository.Tests/GTDApp.Repository.Tests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{BCBC2E85-08CC-4D5F-87A3-A13A2EF1C081}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GTDApp.Repository.Tests</RootNamespace>
-    <AssemblyName>GTDApp.Repository.Tests</AssemblyName>
+    <RootNamespace>GtdApp.Repository.Tests</RootNamespace>
+    <AssemblyName>GtdApp.Repository.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -26,7 +26,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\oenik.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Debug\GTDApp.Repository.Tests.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\GtdApp.Repository.Tests.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
