--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Repository/GTDApp.Repository.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Repository/GTDApp.Repository.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7482D9E8-9013-4804-B967-1EBDDA255450}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GTDApp.Repository</RootNamespace>
-    <AssemblyName>GTDApp.Repository</AssemblyName>
+    <RootNamespace>GtdApp.Repository</RootNamespace>
+    <AssemblyName>GtdApp.Repository</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -24,7 +24,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\oenik.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Debug\GTDApp.Repository.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\GtdApp.Repository.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -74,7 +74,7 @@
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GTDApp.Data\GtdApp.Data.csproj">
+    <ProjectReference Include="..\GtdApp.Data\GtdApp.Data.csproj">
       <Project>{EDCB7DCA-E17F-4829-8884-8C5D11A2E364}</Project>
       <Name>GtdApp.Data</Name>
     </ProjectReference>
