--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp/GtdApp.Console.csproj
@@ -6,12 +6,15 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F8A85677-CC20-4543-85AD-7A0213A89CAC}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>GTDApp</RootNamespace>
-    <AssemblyName>GTDApp</AssemblyName>
+    <RootNamespace>GtdApp</RootNamespace>
+    <AssemblyName>GtdApp</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,11 +27,8 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -39,9 +39,10 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\GTDApp.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\GtdApp.xml</DocumentationFile>
     <CodeAnalysisRuleSet>..\oenik.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -147,8 +148,11 @@
   <ItemGroup>
     <AdditionalFiles Include="..\stylecop.json">
       <Link>stylecop.json</Link>
+      <SubType>Designer</SubType>
     </AdditionalFiles>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -172,19 +176,19 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GTDApp.ConsoleCore\GTDApp.ConsoleCore.csproj">
+    <ProjectReference Include="..\GtdApp.ConsoleCore\GtdApp.ConsoleCore.csproj">
       <Project>{e21bf1e5-69d0-4a53-af75-1df64704c172}</Project>
-      <Name>GTDApp.ConsoleCore</Name>
+      <Name>GtdApp.ConsoleCore</Name>
     </ProjectReference>
-    <ProjectReference Include="..\GTDApp.Data\GtdApp.Data.csproj">
+    <ProjectReference Include="..\GtdApp.Data\GtdApp.Data.csproj">
       <Project>{EDCB7DCA-E17F-4829-8884-8C5D11A2E364}</Project>
       <Name>GtdApp.Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\GTDApp.Login\GtdApp.Logic.csproj">
+    <ProjectReference Include="..\GtdApp.Logic\GtdApp.Logic.csproj">
       <Project>{02eea9ad-813f-4af8-93b4-c61ca417e8df}</Project>
       <Name>GtdApp.Logic</Name>
     </ProjectReference>
-    <ProjectReference Include="..\GTDApp.Repository\GtdApp.Repository.csproj">
+    <ProjectReference Include="..\GtdApp.Repository\GtdApp.Repository.csproj">
       <Project>{7482D9E8-9013-4804-B967-1EBDDA255450}</Project>
       <Name>GtdApp.Repository</Name>
     </ProjectReference>
