stylecop for GTDApp.Data

--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Logic.Tests/GTDApp.Logic.Tests.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Logic.Tests/GTDApp.Logic.Tests.csproj
@@ -50,10 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLogicTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="stylecop.json" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
