--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Data/GTDApp.Data.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Data/GTDApp.Data.csproj
@@ -108,5 +108,9 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
