basic notification test

--- a/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Logic.Tests/GTDApp.Logic.Tests.csproj
+++ b/OENIK_PROG3_2018_2_EP7D0O/GTDApp.Logic.Tests/GTDApp.Logic.Tests.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessLogicTests.cs" />
+    <Compile Include="NotificationBusinessLogicTests.cs" />
     <Compile Include="ItemBusinessLogicTests.cs" />
     <Compile Include="ContainerBusinessLogicTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
